# python_study1

./: main.py  matplotlib_study.ipynb  numpy_study.ipynb  pyproject.toml  test1.py
china_water_use/: __init__.py  constants.py  core.py  units.py  variables.py
china_water_use/data/: fields.csv  items.json
china_water_use/data/GIS Shapefile/: perfectures.dbf  perfectures.sbn  perfectures.sbx  perfectures.shx
